--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -11,3 +11,10 @@
       #{$colunmLength} * 100% - #{$gutter-horizontal} * (#{$totalColumns} - #{$colunmLength}) 
     ) / #{$totalColumns});
 }
+
+@mixin center-absolote-position {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
