--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,20 @@
 }
 
 html {
-  font-size: 62.5%; //rem definition
+  //rem definition
+  font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%;
+
+  @include respond(landscape) {
+    font-size: 56.25%; // 9px/16px = 56.25%;
+  }
+  
+  @include respond(portrait) {
+    font-size: 50%; // 8px/16px = 50%;
+  }
+
+  @include respond(desktop-big) {
+    font-size: 75%; // 12px/16px = 70%;
+  }
 }
 
 body {
