--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -5,6 +5,14 @@
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
 
+    @include respond(portrait) {
+      margin-bottom: $gutter-vertical-small;
+    }
+  }
+
+  @include respond(portrait) {
+    max-width: 50rem;
+    padding: 0 3rem;
   }
 
   @include clearfix;
@@ -14,6 +22,15 @@
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+
+      @include respond(portrait) {
+        margin-right: 0;
+        margin-bottom: $gutter-vertical-small;
+      }
+    }
+
+    @include respond(portrait) {
+      width: 100% !important;
     }
   }
 
