--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,10 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
   transition: transform .3s;
 
+  @include respond(portrait) {
+    padding: 2rem;
+  }
+
   &:hover {
     transform: translateY(-1.5rem) scale(1.03);
   }
@@ -19,5 +23,9 @@
     background-clip: inherit;
     -webkit-background-clip: text;
     color: transparent;
+
+    @include respond(portrait) {
+      margin-bottom: 0;
+    }
   }
 }
