--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,6 +10,10 @@
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(portrait) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
