--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -27,6 +27,11 @@
     width: 33.33333333%;
     display: table-cell;
     vertical-align: middle;
+
+    @include respond(landscape) {
+      width: 100%;
+      display: flex;
+    }
   }
 
   &__right {
@@ -34,11 +39,20 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(landscape) {
+      width: 100%;
+      display: inline-block;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(landscape) {
+      width: 50%;
+    }
   }
 
   &__text {
@@ -56,6 +70,11 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    @include respond(portrait) {
+      -moz-column-count: 1;
+      column-count: 1;
+    }
   }
 
   &:target {
