--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -52,7 +52,7 @@
   background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
 
   @include respond(portrait) {
-    padding: 10rem;
+    padding: 10rem 0;
   }
 }
 
@@ -67,10 +67,35 @@
   border-radius: $default-border-radious;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
+  
+  @include respond(landscape) {
+    background-image: linear-gradient(
+      105deg,
+      rgba($color-white, .9) 0%,
+      rgba($color-white, .9) 65%,
+      transparent 65%
+    ), url(../img/nat-10.jpg);
+    background-size: cover;
+  }
+
+  @include respond(portrait) {
+    background-image: linear-gradient(
+      to right,
+      rgba($color-white, .9) 0%,
+      rgba($color-white, .9) 100%
+    ), url(../img/nat-10.jpg);
+  }
+
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(landscape) {
+      width: 65%;
+    }
+
+    @include respond(portrait) {
+      width: 100%;
+    }
   }
-  
-  height: 50rem;
 }
